tests/snapshots/runtime_error_fixtures/primop_array_len_type.snap
---
source: tests/runtime_error_fixtures_snapshots.rs
---
Fixture: examples/runtime_errors/primop_array_len_type.flx
== vm ==
status: 1
stdout:
<empty>
stderr:
[1 of 7] Compiling  Assert
[2 of 7] Compiling  IO
[3 of 7] Compiling  List
[4 of 7] Compiling  Numeric
[5 of 7] Compiling  Option
[6 of 7] Compiling  String
[7 of 7] Compiling  primop_array_len_type
[cfg→vm] Running via CFG → bytecode VM backend...
• 1 error • examples/runtime_errors/primop_array_len_type.flx
error[E1004]: primop array_len expected Array, got Int

  examples/runtime_errors/primop_array_len_type.flx:2:19
  |
2 |     let ignored = array_len(1)
  |                   ^^^^^^^^^^^^

Stack trace:
  at main (examples/runtime_errors/primop_array_len_type.flx:2:19)
  at <main>
